build v4.17 and v4.19 and add patch to use mkstemp

--- a/transformers-4.19/meta.yaml
+++ b/transformers-4.19/meta.yaml
@@ -8,10 +8,12 @@ package:
 source:
   git_url: https://github.com/huggingface/transformers.git
   git_rev: v{{ version }}
+  patches:
+    - 0001-Use-mkstemp-to-replace-deprecated-mktemp.patch
 
 build:
   noarch: python
-  number: 1
+  number: 2
   string: pyh{{ PKG_HASH }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }}
   script: '{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv '
 
