--- a/transformers-4.19/meta.yaml
+++ b/transformers-4.19/meta.yaml
@@ -10,10 +10,11 @@ source:
   git_rev: v{{ version }}
   patches:
     - 0001-Use-mkstemp-to-replace-deprecated-mktemp.patch
+    - 0001-relax-tokenizers-pin.patch
 
 build:
   noarch: python
-  number: 2
+  number: 3
   string: pyh{{ PKG_HASH }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }}
   script: '{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv '
 
