Add patch for CVE fix from PR27776

--- a/transformers-4.17/meta.yaml
+++ b/transformers-4.17/meta.yaml
@@ -10,6 +10,7 @@ source:
   git_rev: v{{ version }}
   patches:
     - 0001-Use-mkstemp-to-replace-deprecated-mktemp.patch
+    - 0002-PR27776.patch
 
 build:
   noarch: python
