[1.9.4]Add patch for CVE fix from PR27776 (#41)
* Add patch for CVE fix from PR27776

* Update build number

--- a/transformers-4.19/meta.yaml
+++ b/transformers-4.19/meta.yaml
@@ -10,11 +10,12 @@ source:
   git_rev: v{{ version }}
   patches:
     - 0001-Use-mkstemp-to-replace-deprecated-mktemp.patch
-    - 0001-relax-tokenizers-pin.patch
+    - 0002-relax-tokenizers-pin.patch
+    - 0003-PR27776.patch
 
 build:
   noarch: python
-  number: 3
+  number: 4
   string: pyh{{ PKG_HASH }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }}
   script: '{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv '
 
